--- a/PracticalProject1/Views/Home/Index.cshtml
+++ b/PracticalProject1/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 
 }
 
+
 <div class="text-center">
     <h1 class="display-4">Practical Exam</h1>
   <br />
@@ -25,7 +26,7 @@
     <thead>
         <tr class="text-center">
             <th>Code</th>
-            <th>Names</th>
+            <th id="thNames">Names</th>
         </tr>
     </thead>
     <tbody class="text-center" id="name_data"></tbody>
